--- a/index.html
+++ b/index.html
@@ -26,6 +26,7 @@
     </div>
     <div class="icon"> <i class='bx bxs-shopping-bag' ></i></div>
 </div>
+<div class="sam">ksjdofkdl</div>
     </nav>  
 
 
