--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
 </head>
 <body>
    <main>
+
+    <h1>sam</h1>
     <nav>
        <button class="button0"> TASTE<br>HUB</button>
         <div class="nav">
@@ -26,6 +28,7 @@
     </div>
     <div class="icon"> <i class='bx bxs-shopping-bag' ></i></div>
 </div>
+
     </nav>  
 
 
